0.0.4.FixSpacing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* for computer screen----------------------------- */
 @media only screen and (max-width: 2560px) { 
 
     /* header------------------------------------ */
@@ -16,13 +17,18 @@
     .details 
     h1 {
         font-size: 70px;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
     }
 
     .header 
     .details 
-    .hidden {
+    .show {
         font-size: 30px;
-        display: none;
+        display: show;
+        padding-left: 20%;
+        margin-top: 0px;
+        padding-top: 0px;
     }
 
     .header 
@@ -30,6 +36,7 @@
     p {
         font-size: 30px;
         color: rgba(255, 82, 82, 1);
+        margin: 0%;
     }
 
     .header 
@@ -94,9 +101,16 @@
 
     .lower 
     .right-content {
+        margin: 3% 0% 0% 0%;
         padding: 0% 0% 0% 5%;
-        border-bottom: #b11717 5px solid;
-        margin-bottom: 5%;
+        border-bottom: rgba(255, 82, 82, 1)5px solid;
+        
+    }
+
+    .lower 
+    .right-content.profile {
+        margin-top: 0%;
+        padding-bottom: 3%;
     }
 
     .lower 
@@ -112,6 +126,7 @@
         font-size: 25px;
         color: rgb(34, 34, 34);
         text-indent: 30px;
+        margin: 0%;
     }
 
     .lower 
@@ -120,13 +135,21 @@
         font-size: 16px;
         color: rgb(34, 34, 34);
         text-indent: 30px;
+        margin: 0%;
     }
+
+    .lower 
+    .right-content
+    .descrition{
+        margin:  1% 0% 3% 0%;
+    }
+
 
 
 }
 
-
-@media only screen and (max-width: 376px) { 
+/* for small screen----------------------------- */
+@media only screen and (max-width: 768px) { 
 
     /* header------------------------------------ */
     .header {
@@ -148,9 +171,10 @@
 
     .header 
     .details 
-    .hidden {
-        font-size: 25px;
-        display: hidden;
+    .show {
+        font-size: 20px;
+        display: show;
+        padding-left: 0%;
     }
 
     .header 
@@ -158,6 +182,7 @@
     p {
         font-size: 20px;
         color: rgba(255, 82, 82, 1);
+        display: none;
     }
 
     .header 
